# File-transmission-using-message-queue

./: CMakeLists.txt  README.md  mq_client.c  mq_server.c  utilIPC.c  utilIPC.h
